# CmakeResources

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Readme.md  TODO.txt  conanfile.txt
Modules/: ConanSetup.cmake  TargetBuild.cmake  VsCode.cmake
include/: info.hpp  manager.hpp  parser.hpp
old/: CMakeLists.txt
old/src/commands/: commands.cmake
old/src/script/: config.cmake  info.cmake
old/tests/: CMakeLists.txt
old/tests/heavy/bundle/: ResourcesLists.txt
old/tests/heavy/bundle/_1and2/: _1.txt
old/tests/heavy/bundle/_3and4/_4/: _4.txt
old/tests/heavy/src/: main.cpp
old/tests/simple/: CMakeLists.txt  expectedOutput.txt
old/tests/simple/bundle/f1/: f1_1.txt  f1_2.txt
old/tests/simple/bundle/f2/f21/: f2_f21_1.txt
old/tests/various/: CMakeLists.txt
old/tests/various/bundle/f1/: 03.txt
old/tests/various/bundle/f2/f21/: 07.txt
old/tests/various/src/: main.cpp
src/: CMakeLists.txt  buildScript.cmake  manager.cpp  parser.cpp
src/commands/: compile.cmake
src/new_tool/: CMakeLists.txt
src/new_tool/src/: main.cpp
src/script/: bundle.cmake  config.cmake  indexing.cmake  info.cmake  misc.cmake
src/tool/: CMakeLists.txt  cmds.txt  main.cpp  res.conf
tests/: CMakeLists.txt  test.cmake
tests/heavy/: CMakeLists.txt  expectedOutput.txt
tests/heavy/bundle/_1and2/: _2.txt
tests/heavy/bundle/_3and4/: _3.txt
tests/heavy/src/: main.cpp
tests/simple/: ResourcesLists.txt
tests/simple/src/: main.cpp
tests/various/: expectedOutput.txt
tests/various/bundle/f1/: 02.txt  1.txt  4.txt
tests/various/bundle/f2/: 5.txt  6.txt
tests/various/bundle/f2/f21/: 8.txt
tests/various/bundle/f2/f22/: 10.txt  9.txt
